IndexAggregationCommonTest: replaced guava with java collections